# QBIND

./: .gitignore  ARCHITECTURE.md  Cargo.toml  INVESTIGATION_SUMMARY.md  README.md  T143_QBIND_RENAME_PLAN.md  T144_PQC_PROD_PROFILE_AUDIT.md  T145_PQC_PROD_SOAK_AUDIT.md  T146_PQC_MICROBENCH_AUDIT.md  ack_syms.txt  conf_syms.txt  diff_277_279.txt  rec_syms.txt  verify_nodeconfig_fix.sh
crates/cano-consensus/: Cargo.toml
crates/cano-consensus/src/: adversarial_multi_sim.rs  basic_hotstuff_engine.rs  block_state.rs  crypto_verifier.rs  driver.rs  governed_key_registry.rs  hotstuff_state_engine.rs  ids.rs  key_registry.rs  lib.rs  multi_sim.rs  network.rs  pacemaker.rs  sim.rs  timeout.rs  validator_set.rs  verify.rs  vote_accumulator.rs
crates/cano-consensus/tests/: adversarial_multi_node_sim_tests.rs  basic_hotstuff_engine_sims_tests.rs  commit_log_memory_limits_tests.rs  consensus_memory_limits_tests.rs  consensus_node_tests.rs  consensus_pqc_metrics_tests.rs  consensus_progress_metrics_tests.rs  consensus_sig_suite_dispatch_tests.rs  consensus_state_memory_limits_tests.rs  consensus_state_tests.rs  consensus_verify_tests.rs  crypto_consensus_verifier_tests.rs  crypto_verifier_metrics_tests.rs  crypto_verifier_multisuite_integration_tests.rs  driver_mock_network_tests.rs  driver_validator_context_strictness_tests.rs  driver_verifier_integration_tests.rs  epoch_state_tests.rs  epoch_transition_tests.rs  epoch_validation_tests.rs  equivocation_recorder_tests.rs  governed_key_registry_tests.rs  hotstuff_decision_tests.rs  hotstuff_driver_commit_notifications_tests.rs  hotstuff_equivocation_detection_tests.rs  hotstuff_locked_block_safety_tests.rs  hotstuff_qc_aggregation_tests.rs  hotstuff_state_commit_tests.rs  hotstuff_state_height_and_log_tests.rs  hotstuff_state_locking_tests.rs  hotstuff_state_tests.rs  multi_node_sim_tests.rs  noop_verifier_tests.rs  pacemaker_basic_tick_tests.rs  qc_suite_matching_tests.rs  qc_validation_tests.rs  single_node_sim_tests.rs  suite_mismatch_tests.rs  t112_epoch_transition_safety_tests.rs  t131_ml_dsa_44_integration_tests.rs  (+5 more)
crates/cano-crypto/: Cargo.toml
crates/cano-crypto/src/: aead.rs  chacha20poly1305.rs  consensus_sig.rs  error.rs  lib.rs  ml_dsa44.rs  ml_kem768.rs  provider.rs  signature.rs  suite_catalog.rs
crates/cano-crypto/tests/: consensus_sig_tests.rs  dummy_signature_suite_tests.rs  ml_dsa44_tests.rs  ml_kem768_tests.rs  t134_ml_kem_768_integration_tests.rs  t142_node_key_hygiene_tests.rs
crates/cano-node/: Cargo.toml
crates/cano-node/src/: async_peer_manager.rs  async_runner.rs  block_store.rs  channel_config.rs  consensus_net.rs  consensus_net_worker.rs  consensus_network_facade.rs  consensus_node.rs  consensus_sim.rs  hotstuff_node_sim.rs  identity_map.rs  keystore.rs  ledger_bridge.rs  lib.rs  load_harness.rs  metrics.rs  metrics_http.rs  net_service.rs  peer.rs  peer_manager.rs  peer_rate_limiter.rs  secure_channel.rs  startup_validation.rs  storage.rs  validator_config.rs  validator_signer.rs  verify_pool.rs
crates/cano-node/tests/: async_consensus_net_adapter_tests.rs  async_kemtls_integration_tests.rs  async_peer_manager_integration_tests.rs  async_peer_manager_limits_tests.rs  async_runner_tests.rs  block_apply_tests.rs  block_store_integration_tests.rs  block_store_pruning_tests.rs  channel_config_tests.rs  commit_index_pruning_tests.rs  commit_index_tests.rs  consensus_net_roundtrip_tests.rs  consensus_net_worker_tests.rs  consensus_network_trait_adapter_tests.rs  consensus_node_smoke_tests.rs  epoch_persistence_tests.rs  epoch_startup_validation_tests.rs  epoch_suite_downgrade_policy_tests.rs  epoch_suite_policy_tests.rs  hotstuff_restart_semantics_tests.rs  kem_metrics_node_integration_tests.rs  kemtls_encrypted_transport_tests.rs  kemtls_handshake_concurrency_tests.rs  kemtls_pqc_metrics_tests.rs  metrics_http_tests.rs  net_service_connection_limits_tests.rs  net_service_ping_sweep_tests.rs  net_service_smoke_tests.rs  network_runtime_metrics_tests.rs  node_arc_proposal_sharing_tests.rs  node_consensus_sim_tests.rs  node_hotstuff_commit_index_integration_tests.rs  node_hotstuff_commit_notifications_tests.rs  node_hotstuff_drain_committed_blocks_tests.rs  node_hotstuff_end_to_end_tests.rs  node_hotstuff_follower_block_store_tests.rs  node_ledger_integration_tests.rs  node_pacemaker_integration_tests.rs  node_pruning_integration_tests.rs  node_two_node_ledger_convergence_tests.rs  (+47 more)
crates/cano-runtime/: Cargo.toml
crates/cano-runtime/src/: lib.rs
crates/cano-runtime/tests/: block_executor_tests.rs  tx_executor_tests.rs
crates/qbind-consensus/: Cargo.toml
crates/qbind-consensus/src/: adversarial_multi_sim.rs  basic_hotstuff_engine.rs  block_state.rs  crypto_verifier.rs  driver.rs  governed_key_registry.rs  hotstuff_state_engine.rs  ids.rs  key_registry.rs  key_rotation.rs  lib.rs  multi_sim.rs  network.rs  pacemaker.rs  qc.rs  sim.rs  timeout.rs  timeout_verify.rs  validator_set.rs  verify.rs  verify_job.rs  vote_accumulator.rs
crates/qbind-consensus/tests/: adversarial_multi_node_sim_tests.rs  basic_hotstuff_engine_sims_tests.rs  commit_log_memory_limits_tests.rs  consensus_memory_limits_tests.rs  consensus_node_tests.rs  consensus_pqc_metrics_tests.rs  consensus_progress_metrics_tests.rs  consensus_sig_suite_dispatch_tests.rs  consensus_state_memory_limits_tests.rs  consensus_state_tests.rs  consensus_verify_tests.rs  crypto_consensus_verifier_tests.rs  crypto_verifier_metrics_tests.rs  crypto_verifier_multisuite_integration_tests.rs  driver_mock_network_tests.rs  driver_validator_context_strictness_tests.rs  driver_verifier_integration_tests.rs  epoch_state_tests.rs  epoch_transition_tests.rs  epoch_validation_tests.rs  equivocation_recorder_tests.rs  governed_key_registry_tests.rs  hotstuff_decision_tests.rs  hotstuff_driver_commit_notifications_tests.rs  (+25 more)
crates/qbind-crypto/: Cargo.toml
crates/qbind-gov/: Cargo.toml
crates/qbind-ledger/: Cargo.toml
crates/qbind-node/: Cargo.toml
crates/qbind-remote-signer/: Cargo.toml
crates/qbind-runtime/: Cargo.toml
crates/qbind-system/: Cargo.toml
(+2348 files in other folders)
