[workspace]
resolver = "2"
members = [
    "crates/cano-types",
    "crates/cano-wire",
    "crates/cano-hash",
    "crates/cano-crypto",
    "crates/cano-serde",
    "crates/cano-ledger",
    "crates/cano-system",
    "crates/cano-runtime",
    "crates/cano-genesis",
    "crates/cano-consensus",
    "crates/cano-node",
    "crates/cano-net",
]