[workspace]
resolver = "2"
members = [
    "crates/qbind-types",
    "crates/qbind-wire",
    "crates/qbind-hash",
    "crates/qbind-crypto",
    "crates/qbind-serde",
    "crates/qbind-ledger",
    "crates/qbind-system",
    "crates/qbind-runtime",
    "crates/qbind-genesis",
    "crates/qbind-consensus",
    "crates/qbind-node",
    "crates/qbind-net",
    "crates/qbind-remote-signer",
    "crates/qbind-gov",
]