[package]
name = "cano-node"
version = "0.1.0"
edition = "2021"

[features]
default = []
# Enable the async peer manager path (T90.1).
# When enabled: uses AsyncPeerManagerImpl for fully async networking.
# When disabled (legacy): uses blocking PeerManager + spawn_blocking path.
async-peer-manager = []

[dependencies]
cano-wire      = { path = "../cano-wire" }
cano-consensus = { path = "../cano-consensus" }
cano-runtime   = { path = "../cano-runtime" }
cano-ledger    = { path = "../cano-ledger" }
cano-crypto    = { path = "../cano-crypto" }
cano-types     = { path = "../cano-types" }
cano-net       = { path = "../cano-net" }
rocksdb        = "0.22"
tokio          = { version = "1.44", features = ["rt-multi-thread", "time", "sync", "macros", "net", "io-util"] }
crossbeam-channel = "0.5"
num_cpus       = "1.16"

[dev-dependencies]
cano-serde  = { path = "../cano-serde" }
cano-system = { path = "../cano-system" }
tempfile    = "3.10"