[package]
name = "qbind-ledger"
version = "0.1.0"
edition = "2021"

[dependencies]
qbind-types = { path = "../qbind-types" }
qbind-crypto = { path = "../qbind-crypto" }
qbind-wire  = { path = "../qbind-wire" }
qbind-serde = { path = "../qbind-serde" }
qbind-hash  = { path = "../qbind-hash" }
rayon = "1.10"
rocksdb = "0.22"

[dev-dependencies]
tempfile = "3.10"
proptest = "1"