[package]
name = "qbind-ledger"
version = "0.1.0"
edition = "2021"

[features]
# Run 103: expose the test-only `bundle_signing_ratification::test_helpers`
# module to downstream integration-test crates. NOT a production feature —
# the helper builds and ML-DSA-44-signs a ratification object using a
# locally-generated authority secret key, which has no production use.
test-helpers = []

[dependencies]
qbind-types = { path = "../qbind-types" }
qbind-crypto = { path = "../qbind-crypto" }
qbind-wire  = { path = "../qbind-wire" }
qbind-serde = { path = "../qbind-serde" }
qbind-hash  = { path = "../qbind-hash" }
rayon = "1.10"
rocksdb = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.10"
proptest = "1"