[package]
name = "qbind-node"
version = "0.1.0"
edition = "2021"

[features]
default = []
# Enable the async peer manager path (T90.1).
# When enabled: uses AsyncPeerManagerImpl for fully async networking.
# When disabled (legacy): uses blocking PeerManager + spawn_blocking path.
async-peer-manager = []
# Enable HSM/PKCS#11 signer backend (T211).
# When enabled: HsmPkcs11Signer is available for hardware security module signing.
# When disabled: SignerMode::HsmPkcs11 produces a clear startup error.
hsm-pkcs11 = []

[[bin]]
name = "qbind-node"
path = "src/main.rs"

[dependencies]
qbind-wire      = { path = "../qbind-wire" }
qbind-consensus = { path = "../qbind-consensus" }
qbind-runtime   = { path = "../qbind-runtime" }
qbind-ledger    = { path = "../qbind-ledger" }
qbind-crypto    = { path = "../qbind-crypto" }
qbind-types     = { path = "../qbind-types" }
qbind-net       = { path = "../qbind-net" }
qbind-hash      = { path = "../qbind-hash" }
rocksdb        = "0.22"
tokio          = { version = "1.44", features = ["rt-multi-thread", "time", "sync", "macros", "net", "io-util", "signal"] }
crossbeam-channel = "0.5"
num_cpus       = "1.16"
parking_lot    = "0.12"
thiserror      = "1.0"
serde          = { version = "1.0", features = ["derive"] }
serde_json     = "1.0"
bincode        = "1.3"
clap           = { version = "4.5", features = ["derive"] }
hex            = "0.4"

[dev-dependencies]
qbind-serde  = { path = "../qbind-serde" }
qbind-system = { path = "../qbind-system" }
tempfile    = "3.10"
proptest    = "1"